--- a/style.css
+++ b/style.css
@@ -403,3 +403,33 @@ header {
     margin: auto;
   }
 }
+
+.modal {
+  width: 75vw;
+  background-color: aqua;
+  margin: auto;
+  border-radius: 30px;
+  .modal__intro {
+    background-color: #f9f3e8;
+    border-radius: 30px 30px 0 0px;
+    padding: 24px;
+    display: flex;
+    justify-content: space-between;
+    h2 {
+      margin: 0px;
+    }
+  }
+  .modal__content {
+    padding: 24px;
+    .modal__content__titre {
+      display: flex;
+      gap: 8px;
+      h3 {
+        margin: 0;
+      }
+    }
+    ul {
+      padding-left: 24px;
+    }
+  }
+}
